--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   }
 </style>
 </head>
-  <body class="bg-black text-white overflow-hidden">
+  <body class="bg-black text-white">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
