--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CAMEO STUDIO</title>
+    <title>Smart Cameos - AI-Powered Video Generation</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=BBH+Sans+Bogle&display=swap');
     </style>
